:sparkles: Enable autoupdate

--- a/data/en/sections/03-experiences.yaml
+++ b/data/en/sections/03-experiences.yaml
@@ -23,7 +23,7 @@ experiences:
     name: Bleu Cloud
     url: https://bleucloud.fr
     location: La Défense
-    overview: Bleu Cloud is the French Azure cloud that aims to be SecNumCloud 3.2-certified by 2025 
+    overview: Bleu Cloud is the French Azure cloud that aims to be SecNumCloud 3.2-certified  
   positions:
   - designation: Cloud Architect
     start: Sep 2024
