--- a/data/fr/sections/01-about.yaml
+++ b/data/fr/sections/01-about.yaml
@@ -18,13 +18,17 @@ socialLinks:
   icon: fas fa-envelope
   url: timothe@chauvet.cloud
 
+- name: LinkedIn
+  icon: fab fa-linkedin
+  url: https://www.linkedin.com/in/timothechauvet
+
 - name: Github
   icon: fab fa-github
   url: https://www.github.com/timothechauvet
 
-- name: LinkedIn
-  icon: fab fa-linkedin
-  url: https://www.linkedin.com/in/timothechauvet
+- name: GitLab
+  icon: fab fa-gitlab
+  url: https://gitlab.com/timothe_chauvet
 
 badges:
 - type: certification
