--- a/data/fr/sections/03-experiences.yaml
+++ b/data/fr/sections/03-experiences.yaml
@@ -23,7 +23,7 @@ experiences:
     name: Bleu Cloud
     url: https://bleucloud.fr
     location: La Défense
-    overview: Bleu Cloud est le cloud de confiance Microsoft qui vise une certification SecNumCloud 3.2 d'ici 2025 
+    overview: Bleu Cloud est le cloud de confiance Microsoft qui vise une certification SecNumCloud 3.2 
   positions:
   - designation: Architecte Cloud
     start: Sep 2024
